# server/src/app.js
@@ -9,17 +9,30 @@ const express = require("express");
 const applyMiddleware = require("./middleware");
 const routes = require("./routes");
 const { notFound } = require("./utils/error");
+const { requestLogger, errorLogger } = require("./middleware/expressWinston");
+const setCorrelationID = require("./middleware/setCorrelationID");
 
 // create express app instance
 const app = express();
 
 /**
- * Apply global middlewares
+ * Global middlewares
  */
 applyMiddleware(app);
 
 /**
- * Health check endpoint
+ * set correlation id into header
+ */
+
+app.use(setCorrelationID);
+
+/**
+ * Request logging (must be before routes)
+ */
+app.use(requestLogger);
+
+/**
+ * Health check
  */
 app.get("/health", (req, res) => {
   res.status(200).json({
@@ -29,31 +42,35 @@ app.get("/health", (req, res) => {
 });
 
 /**
- * Application routes
+ * Routes
  */
 app.use(routes);
 
 /**
- * Handle undefined routes (404)
+ * 404 handler (before error logger)
  */
 app.use((_req, _res, next) => next(notFound("Requested resource not found")));
 
 /**
+ * Error logger (must be before global handler)
+ */
+app.use(errorLogger);
+
+/**
  * Global error handler
  */
-app.use((err, _req, res, _next) => {
-  // fallback status code
+app.use((err, req, res, _next) => {
   const statusCode = err.statusCode || 500;
 
-  // log full error internally (debugging purpose)
-  console.log(err);
-
-  // structured error response
   res.status(statusCode).json({
     code: statusCode,
-    error: err.error || "Internal server error",
+    error:
+      statusCode >= 500
+        ? "Internal server error"
+        : err.error || "Request failed",
+    correlationId: req.headers["x-correlation-id"],
     message:
-      statusCode === 500
+      statusCode >= 500
         ? "We are sorry for the inconvenience. Please try again later."
         : err.message,
     ...(err.data && { data: err.data }),
